fix social button layout bug when displaying more than 3 buttons

--- a/themes/hugoplate/assets/scss/components.scss
+++ b/themes/hugoplate/assets/scss/components.scss
@@ -26,7 +26,7 @@ main {
 
 // social icons
 .social-icons {
-  @apply space-x-4;
+  @apply flex flex-wrap justify-center gap-4; // space-x-4;
   li {
     @apply inline-block;
     a {
